@@ -43,41 +43,51 @@
     <module>L12-behavioralPatterns</module>
     <module>L13-structuralPatterns</module>
     <module>L14-CreationalPatterns</module>
+    <module>L29-executors</module>
   </modules>
 
   <properties>
 
     <!-- region general -->
-    <java.version>12</java.version>
+    <java.version>13</java.version>
     <revision>2019-09-SNAPSHOT</revision>
+    <minimal.maven.version>3.6.1</minimal.maven.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <!--endregion-->
 
+    <!--region BOM (Bill Of Material)-->
+    <spring-boot.version>2.2.4.RELEASE</spring-boot.version>
+    <!--endregion-->
+
     <!--region libs-->
     <lombok.version>1.18.10</lombok.version>
-    <com.google.guava.version>28.1-jre</com.google.guava.version>
+    <com.google.guava.version>28.2-jre</com.google.guava.version>
     <vavr.version>1.0.0-alpha-3</vavr.version>
 
-    <checker.version>2.11.1</checker.version>
-    <annotations.version>17.0.0</annotations.version>
+    <checker.version>3.1.0</checker.version>
+    <annotations.version>18.0.0</annotations.version>
     <jcip-annotations.version>1.0</jcip-annotations.version>
-    <spotbugs.version>4.0.0-beta4</spotbugs.version>
-    <error_prone_annotations.version>2.3.3</error_prone_annotations.version>
-
-    <junit-jupiter.version>5.3.2</junit-jupiter.version>
-    <assertj.version>3.13.2</assertj.version>
-    <java-hamcrest.version>2.0.0.0</java-hamcrest.version>
-    <mockito.version>2.27.0</mockito.version>
+    <spotbugs.version>4.0.0-RC1</spotbugs.version>
+    <error_prone_annotations.version>2.3.4</error_prone_annotations.version>
     <!--endregion-->
 
     <!--region plugins-->
+    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+    <maven.compiler.parameters>true</maven.compiler.parameters>
+    <maven.compiler.forceJavacCompilerUse>true</maven.compiler.forceJavacCompilerUse>
     <maven.compiler.release>${java.version}</maven.compiler.release>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
-    <maven-assembly-plugin.version>3.1.1</maven-assembly-plugin.version>
 
-    <lombok-maven-plugin.version>1.18.8.1</lombok-maven-plugin.version>
+    <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
+
+    <maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>
+
+    <maven-assembly-plugin.version>3.2.0</maven-assembly-plugin.version>
+    <maven-assembly-plugin.descriptorSuffix>jar-with-dependencies</maven-assembly-plugin.descriptorSuffix>
+
+    <lombok-maven-plugin.version>1.18.10.0</lombok-maven-plugin.version>
     <lombok.verbose>true</lombok.verbose>
     <lombok.addOutputDirectory>false</lombok.addOutputDirectory>
     <lombok.sourceDirectory>${project.basedir}/src/main/java</lombok.sourceDirectory>
@@ -89,6 +99,15 @@
 
   <dependencyManagement>
     <dependencies>
+
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <version>${spring-boot.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
@@ -112,6 +131,7 @@
         <artifactId>vavr</artifactId>
         <version>${vavr.version}</version>
       </dependency>
+
       <!--region Common Annotations (CheckerFramework, JetBrains, SpotBugs, ErrorProne) -->
       <dependency>
         <groupId>org.checkerframework</groupId>
@@ -144,44 +164,7 @@
         <scope>provided</scope>
       </dependency>
       <!--endregion-->
-      <!--region Test dependency management (JUnit-Jupiter, AssertJ, Hamcrest, Mockito, JUnit-Vintage)-->
-      <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-params</artifactId>
-        <version>${junit-jupiter.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.assertj</groupId>
-        <artifactId>assertj-core</artifactId>
-        <version>${assertj.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.hamcrest</groupId>
-        <artifactId>java-hamcrest</artifactId>
-        <version>${java-hamcrest.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.mockito</groupId>
-        <artifactId>mockito-junit-jupiter</artifactId>
-        <version>${mockito.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.junit.vintage</groupId>
-        <artifactId>junit-vintage-engine</artifactId>
-        <version>${junit-jupiter.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-engine</artifactId>
-        <version>${junit-jupiter.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <!--endregion-->
+
     </dependencies>
   </dependencyManagement>
 
@@ -198,17 +181,9 @@
         <scope>test</scope>
       </dependency>
       <dependency>
-        <groupId>org.hamcrest</groupId>
-        <artifactId>java-hamcrest</artifactId>
-      </dependency>
-      <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-junit-jupiter</artifactId>
         <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.junit.vintage</groupId>
-        <artifactId>junit-vintage-engine</artifactId>
       </dependency>
       <dependency>
         <groupId>org.junit.jupiter</groupId>
@@ -224,8 +199,77 @@
     <pluginManagement>
       <plugins>
         <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>${maven-compiler-plugin.version}</version>
+          <configuration>
+            <compilerArgs>
+              <arg>-parameters</arg>
+              <arg>--enable-preview</arg>
+              <!--<arg>-Xplugin:Manifold</arg>-->
+              <!--<arg>-Xlint:preview</arg>-->
+            </compilerArgs>
+            <!--<annotationProcessorPaths>-->
+            <!--  <processorPath>-->
+            <!--    <groupId>systems.manifold</groupId>-->
+            <!--    <artifactId>manifold-all</artifactId>-->
+            <!--    <version>${manifold-version}</version>-->
+            <!--  </processorPath>-->
+            <!--  <processorPath>-->
+            <!--    <groupId>org.projectlombok</groupId>-->
+            <!--    <artifactId>lombok</artifactId>-->
+            <!--    <version>${lombok.version}</version>-->
+            <!--  </processorPath>-->
+            <!--</annotationProcessorPaths>-->
+            <!--<annotationProcessors>-->
+            <!--  <annotationProcessor>lombok.launch.AnnotationProcessorHider$AnnotationProcessor</annotationProcessor>-->
+            <!--  <annotationProcessor>lombok.launch.AnnotationProcessorHider$ClaimingProcessor</annotationProcessor>-->
+            <!--</annotationProcessors>-->
+          </configuration>
+        </plugin>
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven-surefire-plugin.version}</version>
+          <configuration>
+            <argLine>--enable-preview</argLine>
+          </configuration>
+        </plugin>
+
+        <plugin>
           <artifactId>maven-assembly-plugin</artifactId>
           <version>${maven-assembly-plugin.version}</version>
+          <configuration><!-- http://maven.apache.org/plugins/maven-assembly-plugin/usage.html -->
+            <descriptorRefs>
+              <descriptorRef>${maven-assembly-plugin.descriptorSuffix}</descriptorRef>
+            </descriptorRefs>
+          </configuration>
+          <executions>
+            <execution>
+              <id>make-assembly</id> <!-- this is used for inheritance merges -->
+              <phase>package</phase> <!-- bind to the packaging phase -->
+              <goals>
+                <goal>single</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <artifactId>maven-enforcer-plugin</artifactId>
+          <version>${maven-enforcer-plugin.version}</version>
+          <executions>
+            <execution>
+              <id>enforce-maven</id>
+              <goals>
+                <goal>enforce</goal>
+              </goals>
+              <configuration>
+                <rules>
+                  <requireMavenVersion>
+                    <version>${minimal.maven.version}</version>
+                  </requireMavenVersion>
+                </rules>
+              </configuration>
+            </execution>
+          </executions>
         </plugin>
         <plugin>
           <groupId>org.projectlombok</groupId>
@@ -257,6 +301,19 @@
         </plugin>
       </plugins>
     </pluginManagement>
+
+    <plugins>
+
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <artifactId>maven-enforcer-plugin</artifactId>
+      </plugin>
+
+    </plugins>
+
+
 
   </build>
 
